infrastructure/configs/the-intersect/home-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-httproute
  namespace: home-assistant
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_RUGGED_RESOLVE}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8080
